# EF

./: .gitignore  .gitmodules  CMakeLists.txt  EF.sln  README.md  local.properties  settings.gradle
EF/: CompileShaders.bat  EF.vcxproj  EF.vcxproj.filters  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  ef_device.cpp  ef_device.h  ef_model.cpp  ef_model.h  ef_pipeline.cpp  ef_pipeline.h  ef_swap_chain.cpp  ef_swap_chain.h  ef_utils.hpp  ef_vk_buffer.cpp  ef_vk_buffer.hpp  ef_window.cpp  ef_window.h  first_app.cpp  first_app.h  first_app.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  (+3 more)
EF/Shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
EF/systems/: point_light_system.cpp  point_light_system.hpp  render_system.cpp  render_system.hpp
EF/x64/Debug/: EF.exe.recipe  first_app.obj.enc  model.obj.enc  vc142.idb
EF/x64/Debug/EF.tlog/: CL.10392.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EF.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
android/ef/app/: build.gradle
android/ef/app/src/main/: AndroidManifest.xml
android/ef/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/ef/app/src/main/res/values/: strings.xml
android/ef/app/src/test/java/com/eferus/ef/: ExampleUnitTest.kt
android/ef/gradle/wrapper/: gradle-wrapper.properties
app/src/androidTest/java/com/eferus/ef/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/eferus/ef/: MainActivity.kt
ef/: CMakeLists.txt  build.gradle
ef/android/: CMakeLists.txt
ef/android/src/: AndroidManifest.xml
ef/android/src/main/java/com/eferus/ef/: MainActivity.kt
ef/android/src/res/values/: themes.xml
ef/android/src/res/values-night/: themes.xml
ef/libs/glad/include/glad/: glad.h
ef/libs/glad/src/: glad.c
ef/src/: TextFile1.txt  application.cpp  core.h  entry_point.h
ef/src/main/cpp/: native-lib.cpp
ef/src/main/java/com/eferus/ef/: MainActivity.kt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: application.cpp  application.h  core.h  ef.h  entry_point.h  glad.c  log.h  main.cpp  test
x64/Debug/: EF.ilk
